--- a/Decision_Tree_for_CC_Fraud_Detection.ipynb
+++ b/Decision_Tree_for_CC_Fraud_Detection.ipynb
@@ -63,7 +63,7 @@
     "\n",
     "The data is from credit card transactions. The Time variable is the number of seconds since the first transaction, and the Amount variable is the monetary value of the transaction. The Class variable indicates if a transaction is fraud (value 1) or not fraud (value 0). The other variables, labelled V1 - V28 are anonymised characteristics of the collected data, and represent the most important features following a PCA transformation.\n",
     "\n",
-    "Because the features have been anonymised and transformed, this could also be used as a proxy for other financial ledgers where fraud detection is important, for example a company's sales ledger during a fraud investigation or financial audit.\n",
+    "Because the features have been anonymised and transformed, this could also be used as a proxy for other financial ledgers where fraud detection is important, for example a company's sales ledger during a fraud investigation or financial audit. However, this should be done with caution and only to generate ideas, and any models taken forward to testing on data more relevant to that use case.\n",
     "\n"
    ]
   },
