--- a/Decision_Tree_for_CC_Fraud_Detection.ipynb
+++ b/Decision_Tree_for_CC_Fraud_Detection.ipynb
@@ -1431,7 +1431,7 @@
    "id": "e5b76936",
    "metadata": {},
    "source": [
-    "Given that false negatives are potentially much more costly than false positives, the second model overall appears to have the best generalised performance. Furthermore, depending on the risk appetite of the user, it may be worth reducing the minimum precision still further to increase the recall on new data."
+    "Given that false negatives are potentially much more costly than false positives, the second model overall appears to have the best generalised performance. Furthermore, depending on the risk appetite of the user, it may be worth reducing the minimum precision during tuning (set at 80%) further to increase the recall on new data."
    ]
   },
   {
